dark mode fix for text colors

--- a/src/style.scss
+++ b/src/style.scss
@@ -320,6 +320,10 @@ a {
 
           .for-padding {
                color: $dark;
+
+               a{
+                    color: $dark;
+               }
           }
      }
 }
